--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,15 @@
-runtime: nodejs18
+runtime: nodejs20    
 handlers:
-# Serve all static files with url ending with a file extension
-- url: /(.*\..+)$
-  static_files: build/\1
-  upload: build/(.*\..+)$
-# Catch all handler to index.html
-- url: /.*
-  static_files: build/index.html
-  upload: build/index.html
+  - url: /static
+    static_dir: build/static
+
+  - url: /assets
+    static_dir: build/assets
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: build/index.html
+    upload: build/index.html
