--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,3 +14,6 @@ steps:
     args: ["app", "deploy"]
 # timeout specified for this step as deployment may take more that default time(10min)
     timeout: "30m0s" 
+
+options:
+logging: CLOUD_LOGGING_ONLY
